--- a/README
+++ b/README
@@ -1,12 +1,57 @@
-# 🧮 SAT Calculator
+# 🧮 TANASHI Calculator
 
-Минималистичен калкулатор с клавиатурни шорткъти и поддръжка на %, без `eval`.
+Модерен уеб калкулатор с поддръжка на:
+- ✅ Основни операции (+, −, ×, ÷, %)
+- ✅ Научни функции (√x, x², 1/x, ±)
+- ✅ История на последните 10 операции
+- ✅ Мини история под дисплея (3 реда)
+- ✅ Светла/тъмна тема (запомня се)
+- ✅ Клавиатурни шорткъти
+- ✅ Копиране на резултат с клик
 
-## Стартиране
-Отвори `index.html` в браузър или пусни като GitHub Pages.
+---
 
-## Функции
-- +, −, ×, ÷, %
-- DEL (Backspace), AC (Esc)
-- Enter = равно
-- Форматиране с хилядарски разделители
+## 🌍 Live Demo
+👉 [Виж приложението тук](https://stefantananov.github.io/calculator-app/)  
+
+---
+
+## 🚀 Как да стартираш
+### Локално
+1. Изтегли или клонирай това репо.  
+2. Отвори `index.html` в браузър.  
+   *(или с Live Server във VS Code)*  
+
+### Онлайн (GitHub Pages)
+1. Качи файловете в GitHub репо.  
+2. В **Settings → Pages** активирай Pages от `main` branch.  
+3. След 1–2 мин ще имаш live линк.  
+
+---
+
+## 🧱 Технологии
+- HTML5  
+- CSS3 (custom properties, grid)  
+- Vanilla JavaScript (ES6+)  
+
+---
+
+## ⌨️ Клавиши
+- `0–9` – числа  
+- `+ - * / %` – операции  
+- `Enter` или `=` – равно  
+- `Backspace` – DEL  
+- `Esc` – AC  
+- `R` – √x  
+- `Q` – x²  
+- `I` – 1/x  
+- `P` – ±  
+- `T` – смяна на тема  
+
+---
+
+## 📄 Лиценз
+Този проект е с [MIT лиценз](./LICENSE).  
+Свободно може да се използва, модифицира и споделя, стига да е включено авторството:  
+© 2025 Stefan Tananov
+
